build tool window and global setting update

--- a/custom-build-tool/Assets/Editor/CustomBuildTool/Config/GlobalSettings.json
+++ b/custom-build-tool/Assets/Editor/CustomBuildTool/Config/GlobalSettings.json
@@ -2,13 +2,7 @@
     "scriptingSymbols": [
         "DEVELOPER_BUILD",
         "ICLOUD",
-        "APPCENTER",
-        "",
-        "",
-        "",
-        "",
-        "",
-        ""
+        "APPCENTER"
     ],
     "targetPlatforms": [
         "Android",
